# web2markdown

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
tests/: conftest.py  test_converter.py  test_crawler.py
web2markdown/: __init__.py  cli.py  converter.py  crawler.py
web_to_markdown/: cli.py
