[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web2markdown"
version = "0.1.0"
description = "A Python library for crawling web pages and converting them to markdown format"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["web", "crawler", "markdown", "converter", "html"]
authors = [
    {name = "Roger Koa"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["dependencies", "scripts"]

[project.urls]
Homepage = "https://github.com/roger_koa/web2markdown"
Repository = "https://github.com/roger_koa/web2markdown.git"
